...
            android:enabled="true"
            android:text="Enroll in a Class"
            android:textColor="@android:color/background_dark"
            android:theme="@style/AppTheme" />

        <Button
            android:id="@+id/profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:enabled="true"
            android:text="My Profile"
            android:textColor="@android:color/background_dark"
            android:theme="@style/AppTheme" />

    </LinearLayout>
</ScrollView>

